# jarvis

./: .dockerignore  .env.example  .gitignore  API_VALIDATION_REPORT.md  Dockerfile  FIX_FAILING_APIS.py  QUICK_REFERENCE.txt  README.md  README_VALIDATION.md  SETUP_KEYS.md  VOICE_GUIDE.md  debug_el_complete.py  debug_hf.py  final_validation.py  hf_public_test.py  pyproject.toml  requirements.txt  test_api_key.py  test_apis.py  test_apis_detailed.py  test_el_api.py  test_hf.py  test_hf_advanced.py  test_hf_detailed.py
.github/: copilot-instructions.md
app/: __init__.py  main.py
app/cli/: chat.py  doctor.py  kb.py  media.py  workspace.py
app/core/: config.py  models.py  paths.py
app/kb/: search.py
app/llm/: openai_provider.py
app/media/: elevenlabs_tts.py  image_edit.py  image_gen.py  player.py  stt.py  tts.py
app/sessions/: manager.py
app/workspaces/: manager.py
data/: config.json
docs/: SIGNUP_GUIDE.md
scripts/: setup_keys.py  signup.sh  validate_keys.py
tests/: test_basic.py  test_config_env.py
web/: __init__.py  app.py
workspaces/general/: system.md  workspace.yaml
workspaces/mactech/: system.md  workspace.yaml
